--- a/app/globals.css
+++ b/app/globals.css
@@ -65,6 +65,12 @@
   box-sizing: border-box;
 }
 
+.bg>div {
+  -webkit-clip-path: circle(75%);
+  clip-path: circle(75%);
+  transition: clip-path 3s, -webkit-clip-path 3s
+}
+
 ::selection {
   color: hsl(var(--primary-foreground));
   background: hsl(var(--primary)/0.4);
